禁用不兼容java17的单测。